--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,16 @@
 <html lang="en">
     <head>
         <title>Meadowlark Travel</title>
+        {{#if flash}}
+            <div class="alert alert-dismissible alert-{{flash.type}}">
+                <button type="button" class="close"
+                    data-dismiss="alert" aria-hidden="true">&times;
+                </button>
+                <strong> {{flash.intro}}</strong> {{{flash.message}}}
+            </div>
+
+        {{/if}}
+
         <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
         {{{_sections.head}}}
         {{#if showTests}}
